--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@ hr {
 @media only screen and (max-width: 1000px) {
   #menu {
     width: 0%;
+    transition: ease all 200ms;
   }
   #menu.active{
     width: 100%;
