--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,9 @@ hr {
   }
   .locate-button i
   {
+    position: absolute;
+    left: 50%;
+    top: 50%;
     color: white;
     cursor:'pointer';
   }
