Added flex to i in styles

--- a/src/App.css
+++ b/src/App.css
@@ -161,5 +161,8 @@ hr {
   .locate-button i
   {
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
