--- a/src/App.css
+++ b/src/App.css
@@ -162,8 +162,7 @@ hr {
   .locate-button i
   {
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin:auto;
+    padding: 0;
   }
 }
